# pdf2mp3

./: .gitignore  README.md  pyproject.toml
research/: paragraph_search.ipynb  pdf2mp3.ipynb  pdf2mp3_draft.ipynb
src/pdf2mp3/: cli.py  core.py
src/pdf2mp3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_cli.py  test_cli_unittest.py  test_core.py  test_core_unittest.py
